# informer

./: .gitignore  Cargo.toml  Dockerfile  docker-compose_example.yml
src/: data_fetcher.rs  main.rs  message_actions.rs  message_data.rs
