[package]
name = "informer"
version = "0.1.2"
edition = "2021"
authors = ["Dmitriy Vlassov aka batman <dmitriy@vlassov.pw>"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true

[dependencies]
reqwest = { version = "0.11.22", features = ["cookies", "gzip", "brotli", "deflate"] }
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.108"
serde_derive = "1.0.193"
redis = { version = "0.24.0", features = ["serde_json"] }
log = "0.4.20"
env_logger = "0.10.1"
chrono = "0.4.31"
scraper = "0.18.1"
teloxide = "0.12.2"
url = "2.5.0"
time = "0.3.30"
clap = { version = "4.4.11", features = ["derive"] }
